tests/scan/fixtures/validation/negative/clean_go_clean-webserver/go.mod
module github.com/example/clean-webserver
go 1.21
